removed unnecessary tags

--- a/section-3/quiz1.html
+++ b/section-3/quiz1.html
@@ -10,9 +10,9 @@
 </head>
 <body>
 
-<h1><strong>Things I've Learned</strong></h1>
+<h1>Things I've Learned</h1>
 
-<h2><strong>Internet Basics</strong></h2>
+<h2>Internet Basics</h2>
 
 <ol>
   <li>HTTP Requests</li>
@@ -20,7 +20,7 @@
   <li>Servers</li>
 </ol>
 
-<h2><strong>HTML</strong></h2>
+<h2>HTML</h2>
 
 <ul>
   <li>Stands for <strong>Hyper Text Markup Language</strong></li>
